--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -6,10 +6,6 @@ on:
     branches:
       - main
 
-permissions:
-  contents: write
-  pull-requests: write
-
 jobs:
   release:
     name: Release
@@ -27,20 +23,29 @@ jobs:
               {"type":"fix","section":"Bug Fixes","hidden":false},
               {"type":"chore","section":"Miscellaneous","hidden":true}
             ]
+
       - name: Checkout
         uses: actions/checkout@v3
         if: steps.release-please.outputs.release_created
         with:
           fetch-depth: 0
+
       - name: Set up Go
         uses: actions/setup-go@v4
         if: steps.release-please.outputs.release_created
         with:
           go-version-file: go.mod
-      - name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@v4
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
         if: steps.release-please.outputs.release_created
-        with:
-          args: release --clean --config .goreleaser.yaml
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+        if: steps.release-please.outputs.release_created
+
+      - name: Run GoReleaser
+        if: steps.release-please.outputs.release_created
+        run: make release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
