--- a/config.yaml
+++ b/config.yaml
@@ -34,7 +34,7 @@ github:
   repo: networks
   dir: _IBC
 
-account:
+accounts:
   - address: archway1l2al7y78500h5akvgt8exwnkpmf2zmk8ky9ht3
     chainId: constantine-3
     denom: aconst
