feat: Add cosmos_wallet_balance metric (#12)
* feat: Add cosmos_wallet_balance metric

* refactor: Rename variable name

* refactor: Rename function name

* refactor: make GetBalance a method for Account struct

* chore: Simplify code after review

* fix: Use accounts instead account for collection

--- a/config.yaml
+++ b/config.yaml
@@ -33,3 +33,8 @@ github:
   org: archway-network
   repo: networks
   dir: _IBC
+
+accounts:
+  - address: archway1l2al7y78500h5akvgt8exwnkpmf2zmk8ky9ht3
+    chainId: constantine-3
+    denom: aconst
