--- a/config.yaml
+++ b/config.yaml
@@ -1,38 +1,55 @@
 ---
 rpc:
-  - chainId: archway-1
+  - chainName: archway
+    chainId: archway-1
     url: https://rpc.mainnet.archway.io:443
-  - chainId: agoric-3
+  - chainName: agoric
+    chainId: agoric-3
     url: https://main.rpc.agoric.net:443
-  - chainId: axelar-dojo-1
+  - chainName: axelar
+    chainId: axelar-dojo-1
     url: https://axelar-rpc.polkachu.com:443
-  - chainId: axelar-testnet-lisbon-3
+  - chainName: axelartestnet
+    chainId: axelar-testnet-lisbon-3
     url: https://rpc-axelar-testnet.imperator.co:443
-  - chainId: constantine-3
+  - chainName: archwaytestnet
+    chainId: constantine-3
     url: https://rpc.constantine.archway.tech:443
-  - chainId: cosmoshub-4
+  - chainName: bitcanna
+    chainId: bitcanna-1
+    url: https://rpc.bitcanna.io:443
+  - chainName: cosmoshub
+    chainId: cosmoshub-4
     url: https://cosmoshub-rpc.stakely.io:443
-  - chainId: jackal-1
+  - chainName: jackal
+    chainId: jackal-1
     url: https://jackal-rpc.polkachu.com:443
-  - chainId: juno-1
+  - chainName: juno
+    chainId: juno-1
     url: https://juno-rpc.polkachu.com:443
-  - chainId: kaiyo-1
+  - chainName: kujira
+    chainId: kaiyo-1
     url: https://kujira-rpc.polkachu.com:443
-  - chainId: noble-1
+  - chainName: noble
+    chainId: noble-1
     url: https://noble-rpc.polkachu.com:443
-  - chainId: nois-1
+  - chainName: nois
+    chainId: nois-1
     url: https://nois-rpc.polkachu.com:443
-  - chainId: osmo-test-5
+  - chainName: osmosistestnet
+    chainId: osmo-test-5
     url: https://rpc.osmotest5.osmosis.zone:443
-  - chainId: osmosis-1
+  - chainName: osmosis
+    chainId: osmosis-1
     url: https://osmosis-rpc.stakely.io:443
-  - chainId: quicksilver-2
+  - chainName: quicksilver
+    chainId: quicksilver-2
     url: https://rpc.quicksilver.zone:443
-  - chainId: sandbox-01
+  - chainName: akashtestnet
+    chainId: sandbox-01
     url: https://rpc.sandbox-01.aksh.pw:443
-  - chainId: theta-testnet-001
-    url: https://rpc.sentry-01.theta-testnet.polypore.xyz:443
-  - chainId: umee-1
+  - chainName: umee
+    chainId: umee-1
     url: https://rpc-umee.mzonder.com:443
 
 github:
@@ -42,5 +59,5 @@ github:
 
 accounts:
   - address: archway1l2al7y78500h5akvgt8exwnkpmf2zmk8ky9ht3
-    chainId: constantine-3
+    chainName: archwaytestnet
     denom: aconst
