--- a/config.yaml
+++ b/config.yaml
@@ -51,11 +51,21 @@ rpc:
   - chainName: umee
     chainId: umee-1
     url: https://rpc-umee.mzonder.com:443
+  - chainName: gravitybridge
+    chainId: gravity-bridge-3
+    url: https://gravitychain.io:26657
+  - chainName: omniflixhub
+    chainId: omniflixhub-1
+    url: https://rpc-omniflix.mzonder.com:443
+  - chainName: decentr
+    chainId: mainnet-3
+    url: https://poseidon.mainnet.decentr.xyz:443
 
 github:
   org: archway-network
   repo: networks
   dir: _IBC
+  testnetsDir: testnets/_IBC
 
 accounts:
   - address: archway1l2al7y78500h5akvgt8exwnkpmf2zmk8ky9ht3
