--- a/config.yaml
+++ b/config.yaml
@@ -26,7 +26,7 @@ rpc:
     url: https://jackal-rpc.polkachu.com:443
   - chainName: juno
     chainId: juno-1
-    url: https://juno-rpc.polkachu.com:443
+    url: https://juno-rpc.publicnode.com:443
   - chainName: kujira
     chainId: kaiyo-1
     url: https://kujira-rpc.polkachu.com:443
